# Defect-intelligence

./: .env.example  .gitignore  LICENSE  README.md  RUNBOOK.md
backend/: CMakeLists.txt  Makefile
backend/include/defect_intelligence/: core.h  http_server.h
backend/src/: core.cpp  defect_parsing.cpp  git_scanner.cpp  http_server.cpp  insight_summary.cpp  internal_utils.cpp  internal_utils.h  json_serialization.cpp  main.cpp  sample_report.cpp
backend/tests/: test_core.cpp
docs/: architecture.md  publishability.md
frontend/: index.html  package.json
frontend/src/: App.tsx  api.js  api.ts  app.js  demo-data.js  demoData.ts  main.js  react-cdn.js  styles.css  types.ts
